fixed build crap

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,10 +1,9 @@
-cmake_minimum_required(VERSION 3.4)
+cmake_minimum_required(VERSION 3.0)
 project(nucleo-cc1120-test)
 
 set(CMAKE_CXX_FLAGS "-pthread")
 set(CMAKE_EXE_LINKER_FLAGS "-pthread")
 
-enable_testing()
 find_package(GTest REQUIRED)
 
 # add more include directories
@@ -15,5 +14,8 @@ set(src "../CC1120.cpp")
 file(GLOB mock_src "mock/*.cpp" "mock/*.c")
 file(GLOB tests "tests/*.cpp")
 
-add_executable(all-tests ${src} ${mock_src} ${tests})
-target_link_libraries(all-tests gtest gtest_main gmock)
+foreach(test ${tests})
+  get_filename_component(test_name ${test} NAME_WE)
+  add_executable(${test_name} ${test} ${mock_src} ${src})
+  target_link_libraries(${test_name} ${GTEST_BOTH_LIBRARIES} gmock)
+endforeach(test)
